--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:33060/colegio
 spring.datasource.username=root
 spring.datasource.password=milton2023
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver DEPRECATE
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql:true
-spring.jpa.hibernate.ddl-auto:update
+#spring.jpa.hibernate.ddl-auto:update
+spring.jpa.hibernate.ddl-auto:create-drop
